--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "lodash._basecopy": "^3.0.1",
     "merge-stream": "^0.1.6",
     "minimist": "^1.1.0",
+    "moment": "^2.10.6",
     "nopt": "^3.0.1",
     "once": "^1.3.2",
     "osenv": "^0.1.0",
