--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "protractor": "^1.6.1",
     "psi": "^1.0.6",
     "react-rating": "0.0.13",
+    "react-select": "^0.6.8",
     "react-tools": "^0.12.2",
     "readable-stream": "^1.0.33",
     "run-sequence": "^1.0.2",
