--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "ini": "^1.3.3",
     "isarray": "0.0.1",
     "jest-cli": "^0.4.10",
+    "jquery": "^2.1.4",
     "jshint": "^2.6.0",
     "jshint-loader": "^0.8.2",
     "jshint-stylish": "^1.0.0",
@@ -100,6 +101,7 @@
     "nopt": "^3.0.1",
     "once": "^1.3.2",
     "osenv": "^0.1.0",
+    "promise": "^7.0.4",
     "protractor": "^1.6.1",
     "psi": "^1.0.6",
     "react-rating": "0.0.13",
