--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "gulp-size": "^1.2.0",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.3",
+    "halogen": "^0.1.10",
     "has-ansi": "^1.0.3",
     "ini": "^1.3.3",
     "isarray": "0.0.1",
